fixed payment success bug - not showing correct membership tier

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -10,10 +10,6 @@ html, body {
     padding: 10px;
     align-items: center;
     justify-content: space-between;
-    /* background-image: url('/assets/navbar-gameboys.png');
-    background-size: 40vh;
-    background-repeat: no-repeat;
-    background-position: center; */
 }
 
 
@@ -30,6 +26,7 @@ h1 {
 }
 
 /* hyperlinks */
+
 .unstyled-link {
     text-decoration: none;
     color: inherit;
